[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cagey"
maintainers = [
  { name = "Lukas Turcani", email = "lukasturcani93@gmail.com" },
]

dependencies = [
  "sqlmodel",
  "polars[connectorx,pyarrow]",
  "nmrglue@git+https://github.com/jjhelmus/nmrglue",
  "pyopenms",
  "rdkit",
]
requires-python = ">=3.11"
dynamic = ["version"]
readme = "README.rst"


[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-datadir",
  "sphinx",
  "sphinx-copybutton",
  "build",
  "twine",
  "furo",
]

[project.scripts]
cagey-rename-ms-csv = "cagey._internal.scripts.rename_ms_csv:main"
cagey-fix-nmr-title = "cagey._internal.scripts.fix_nmr_title:main"
cagey-view-ms = "cagey._internal.scripts.view_ms:main"
cagey-view-nmr = "cagey._internal.scripts.view_nmr:main"
cagey-add-tables = "cagey._internal.scripts.add_tables:main"
cagey-add-reactions = "cagey._internal.scripts.add_reactions:main"
cagey-add-ms = "cagey._internal.scripts.add_ms:main"
cagey-add-nmr = "cagey._internal.scripts.add_nmr:main"
cagey-view-tables = "cagey._internal.scripts.view_tables:main"
compare-nmr-results = "cagey._internal.scripts.compare_nmr_results:main"
compare-ms-results = "cagey._internal.scripts.compare_ms_results:main"

[project.urls]
github = "https://github.com/lukasturcani/cagey"
documentation = "https://cagey.readthedocs.io"

[tool.setuptools_scm]

[tool.ruff]
line-length = 79
extend-select = ["I"]

[tool.black]
line-length = 79

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unreachable = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = [
  "nmrglue.*",
  "rdkit.*",
]
ignore_missing_imports = true
