[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cagey"
maintainers = [
  { name = "Lukas Turcani", email = "lukasturcani93@gmail.com" },
]

dependencies = [
  "polars[connectorx,pyarrow]",
  "nmrglue",
  "pyopenms",
  "rdkit",
  "typer[all]",
  "rich",
]
requires-python = "==3.11.*"
dynamic = ["version"]
readme = "README.rst"
description = "Streamlined automated data analysis."

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-datadir",
  "sphinx",
  "sphinx-copybutton",
  "build",
  "twine",
  "furo",
  "sqlfluff",
]

[project.scripts]
cagey = "cagey._internal.scripts.cagey:app"

[project.urls]
github = "https://github.com/lukasturcani/cagey"
documentation = "https://cagey.readthedocs.io"

[tool.setuptools_scm]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN101", "ANN401", "COM812", "ISC001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "S101",
  "INP001",
]
"docs/source/conf.py" = ["D100", "INP001"]

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unreachable = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = [
  "nmrglue.*",
  "rdkit.*",
]
ignore_missing_imports = true
